--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "expo": "^45.0.6",
+    "expo-status-bar": "^1.3.0",
+    "install": "^0.13.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-web": "0.17.7",
+    "reactotron-react-native": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
